--- a/ProgrammingPalliAPIDemo/ProgrammingPalliAPIDemo.csproj
+++ b/ProgrammingPalliAPIDemo/ProgrammingPalliAPIDemo.csproj
@@ -21,6 +21,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="EF.Core.Repository" Version="1.0.0.2" />
+    <PackageReference Include="CoreApiResponse" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
